make the mapper unit test works